Modified query model